--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-inverse navbar-fixed-top bg-primary" role="navigation">
   <div class="navbar-header">
-    <a class="navbar-brand" href="#">CCB - Congregação Cristã no Brasil</a>
+    <!-- <a class="navbar-brand" href="#">CCB - Congregação Cristã no Brasil</a> -->
   </div>
 
   <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
