--- a/src/app/locals/locals-list/locals-list.component.html
+++ b/src/app/locals/locals-list/locals-list.component.html
@@ -6,25 +6,44 @@
 
     <br /><br /><br />
 
-    <div class="float-right">
-      <a href="locals/novo" class="btn btn-primary">Novo Local</a>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-2">
+          <label class="text-left">Regional: </label>
+        </div>
+        <div class="col-md-10">
+          <p-autoComplete [suggestions]="filteredCountriesSingle" (completeMethod)="filterCountrySingle($event)"
+            field="name" [size]="30" [minLength]="1">
+          </p-autoComplete>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-2">
+          <label class="text-right">Administração: </label>
+        </div>
+        <div class="col-md-10">
+          <p-autoComplete [suggestions]="filteredCountriesSingle" (completeMethod)="filterCountrySingle($event)"
+            field="name" [size]="30" [minLength]="1">
+          </p-autoComplete>
+        </div>
+      </div>
     </div>
-    <br /><br />
+
     <p-table [value]="locals">
       <ng-template pTemplate="header">
         <tr>
-          <th>Código</th>
-          <th>Local</th>
-          <th>Administração</th>
-          <th>Igreja</th>
+          <th class="text-center">Cód. Relatório</th>
+          <th class="text-center">Nome</th>
+          <th class="text-center">Ação</th>
         </tr>
       </ng-template>
       <ng-template pTemplate="body" let-local>
         <tr>
-          <td>{{local.id}}</td>
-          <td>{{local.description}}</td>
-          <td>{{local.administrations[0].name}}</td>
-          <td>{{local.administrations[0].churches[0].description}}</td>
+          <td class="text-center">{{local.id}}</td>
+          <td class="text-center">{{local.administrations[0].name}}</td>
+          <td class="text-center">
+            <button pButton type="button" label="Cadastrar Reunião"></button>
+          </td>
         </tr>
       </ng-template>
     </p-table>
