adicionando formulario meeting

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,14 @@
-<div>
-  <!-- <app-navbar></app-navbar> -->
-  <!-- <div class="container"> -->
-  <!-- <br />
-    <h2> {{title}} </h2>
-    <br /> -->
-  <router-outlet></router-outlet>
-  <!-- </div> -->
+<app-header></app-header>
+
+<div id="wrapper">
+  
+  <div id="page-wrapper">
+
+    <router-outlet></router-outlet>
+
+  </div>
+
 </div>
+
+<app-footer></app-footer>
+
