--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,1 +1,10 @@
-<footer class="footer navbar-fixed-bottom">FOOTER</footer>
+<div class="container">
+    <footer class="main-footer">
+        <div class="pull-right hidden-xs">
+          <b>Version</b> 1.0
+        </div>
+        <strong>Copyright &copy; 2020 <a href="https://congregacaocristanobrasil">Congregação Cristã no Brasil</a>.</strong> All rights
+        reserved.
+    </footer>
+</div>
+
