--- a/src/styles.css
+++ b/src/styles.css
@@ -16,8 +16,9 @@
 }
 
 /* ----- FOOTER ----- */
-footer {
+/* footer {
   position: fixed !important;
   bottom: 0 !important;
   left: 0 !important;
 }
+ */
