--- a/src/app/meetings/meetings-add/meetings-add.component.html
+++ b/src/app/meetings/meetings-add/meetings-add.component.html
@@ -1,12 +1,20 @@
+<br /><br /><br />
+
 <div id="wrapper">
-
-  <app-navbar></app-navbar>
-
-  <div id="page-wrapper">
-
-    <h1>Teste</h1>
-
-  </div>
-
+    <form class="form-inline">
+        <div class="form-group row">
+            <div class="col-md-2">
+                <label for="inputRegional">Igreja: </label>
+            </div>
+            <div class="col-md-4">
+                <input type="password" class="form-control" id="inputPassword2" placeholder="Password"> 
+            </div>
+            <div class="col-md-2">
+                <label for="inputRegional">Regional: </label>
+            </div>
+            <div class="col-md-4">
+                <input type="password" class="form-control" id="inputPassword2" placeholder="Password">
+            </div>
+        </div>
+    </form>
 </div>
-<app-footer></app-footer>
