Criando o formulário de reuniões

--- a/src/app/components/menubar/menubar.component.html
+++ b/src/app/components/menubar/menubar.component.html
@@ -7,40 +7,32 @@
 
         <!-- MEETINGS -->
         <li>
-          <a class="nav-item nav-link" routerLink="/"><i class="fa fa-group fa-fw"></i>
-            Reuniões<span class="fa arrow"></span></a>
+          <a href="/"><i class="fa fa-group fa-fw"></i>Reuniões<span class="fa arrow"></span></a>
           <ul class="nav nav-second-level">
             <li>
-              <a class="nav-item nav-link" [routerLink]="['meeting/lista']" routerLinkActive="active"><i
-                  class="fa fa-list-alt fa-fw"></i> Listar</a>
+              <a class="nav-item nav-link" href="meeting/lista"><i class="fa fa-list-alt fa-fw"></i> Listar</a>
             </li>
             <li>
-              <a class="nav-item nav-link" [routerLink]="['meeting/novo']" routerLinkActive="active"><i
-                  class="fa fa-edit fa-fw"></i> Cadastrar</a>
+              <a class="nav-item nav-link" href="meeting/novo"><i class="fa fa-edit fa-fw"></i> Cadastrar</a>
             </li>
             <li>
-              <a class="nav-item nav-link" [routerLink]="['meeting/record']" routerLinkActive="active"><i
-                  class="fa fa-file-text-o fa-fw"></i> Relatório</a>
+              <a class="nav-item nav-link" href="meeting/record"><i class="fa fa-file-text-o fa-fw"></i> Relatório</a>
             </li>
           </ul>
         </li>
 
         <!-- LOCALS -->
         <li>
-          <a class="nav-item nav-link" routerLink="/"><i class="fa fa-map-marker"></i>
-            Locais<span class="fa arrow"></span></a>
+          <a href="/"><i class="fa fa-map-marker"></i>Locais<span class="fa arrow"></span></a>
           <ul class="nav nav-second-level">
             <li>
-              <a class="nav-item nav-link" [routerLink]="['locals/lista']" routerLinkActive="active"><i
-                  class="fa fa-list-alt fa-fw"></i> Listar</a>
+              <a class="nav-item nav-link" href="locals/lista"><i class="fa fa-list-alt fa-fw"></i> Listar</a>
             </li>
             <li>
-              <a class="nav-item nav-link" [routerLink]="['locals/novo']" routerLinkActive="active"><i
-                  class="fa fa-edit fa-fw"></i> Cadastrar</a>
+              <a class="nav-item nav-link" href="locals/novo"><i class="fa fa-edit fa-fw"></i> Cadastrar</a>
             </li>
             <li>
-              <a class="nav-item nav-link" [routerLink]="['locals/record']" routerLinkActive="active"><i
-                  class="fa fa-file-text-o fa-fw"></i> Relatório</a>
+              <a class="nav-item nav-link" href="locals/record"><i class="fa fa-file-text-o fa-fw"></i> Relatório</a>
             </li>
           </ul>
         </li>
@@ -119,7 +111,7 @@
 
 
 
-<!-- <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+  <!-- <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
   <a class="navbar-brand" href="#">CCB</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
     aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
