--- a/src/app/locals/locals-add/locals-add.component.html
+++ b/src/app/locals/locals-add/locals-add.component.html
@@ -1,3 +1,6 @@
+<div id="wrapper">
+  <div class="page-wrapper">
+
     <br /><br /><br />
 
     <form>
@@ -47,3 +50,5 @@
         </div>
       </div>
     </form>
+  </div>
+</div>
