--- a/src/app/locals/locals-list/locals-list.component.html
+++ b/src/app/locals/locals-list/locals-list.component.html
@@ -1,5 +1,6 @@
+<div id="wrapper">
+  <div class="page-wrapper">
     <br /><br /><br />
-
     <div class="container">
       <div class="row">
         <div class="col-md-2">
@@ -23,6 +24,8 @@
       </div>
     </div>
 
+    <br /><br /><br />
+
     <p-table [value]="locals">
       <ng-template pTemplate="header">
         <tr>
@@ -41,5 +44,5 @@
         </tr>
       </ng-template>
     </p-table>
-
-
+  </div>
+</div>
