--- a/src/app/meetings/meetings-add/meetings-add.component.html
+++ b/src/app/meetings/meetings-add/meetings-add.component.html
@@ -1,20 +1,54 @@
-<br /><br /><br />
-
 <div id="wrapper">
-    <form class="form-inline">
-        <div class="form-group row">
-            <div class="col-md-2">
-                <label for="inputRegional">Igreja: </label>
-            </div>
-            <div class="col-md-4">
-                <input type="password" class="form-control" id="inputPassword2" placeholder="Password"> 
-            </div>
-            <div class="col-md-2">
-                <label for="inputRegional">Regional: </label>
-            </div>
-            <div class="col-md-4">
-                <input type="password" class="form-control" id="inputPassword2" placeholder="Password">
-            </div>
+  <div class="page-wrapper">
+
+    <br /><br /><br />
+
+    <form action="" method="POST">
+      <p-fieldset legend="IGREJA">
+        <div class="ui-g ui-fluid">
+          <div class="form-group ui-g-6">
+            <label for="igreja">Igreja: </label>
+            <input type="text" pInputText />
+            <!--<input type="text" class="form-control" id="igreja">-->
+          </div>
+          <div class="form-group ui-g-6">
+            <label for="salao">Salão: </label>
+            <p-dropdown [options]="saloes" optionLabel="name" [showClear]="true"></p-dropdown>
+          </div>
+          <div class="form-group ui-g-12">
+            <label for="grupos">Grupos: </label>
+            <p-dropdown [options]="grupos" optionLabel="name" [showClear]="true"></p-dropdown>
+          </div>
         </div>
+      </p-fieldset>
+
+      <p-fieldset legend="Data e hora">
+        <div class="form-group ui-g-6">
+          <label for="dtInicio">Data Inicial: </label>
+          <input type="text" pInputText class="form-control" />
+          <!-- <input type="text" class="form-control" id="dtInicio"> -->
+        </div>
+        <div class="form-group ui-g-6">
+          <label for="hrInicial">Hora inicial: </label>
+          <input type="time" pInputText class="form-control" />
+          <!-- <input type="time" class="form-control" id="hrInicial"> -->
+        </div>
+
+        <div class="form-group ui-g-6">
+          <label for="dtTerminio">Data Términio: </label>
+          <input type="text" pInputText class="form-control" />
+          <!-- <input type="text" class="form-control" id="dtTerminio"> -->
+        </div>
+        <div class="form-group ui-g-6">
+          <label for="hrTerminio">Hora Términio: </label>
+          <input type="time" pInputText class="form-control" />
+          <!-- <input type="time" class="form-control" id="hrTerminio"> -->
+        </div>
+      </p-fieldset>
+
+      <br />
+      <button type="submit" class="btn btn-primary">Salvar</button>
     </form>
+
+  </div>
 </div>
