--- a/src/app/meetings/meetings-list/meetings-list.component.html
+++ b/src/app/meetings/meetings-list/meetings-list.component.html
@@ -1,38 +1,40 @@
-<br /><br /><br />
-
 <div id="wrapper">
+  <div class="page-wrapper">
+    <br /><br /><br />
     <form>
-        <div class="form-group row">
-          <label for="inputRegional" class="col-sm-2 col-form-label">Regional: </label>
-          <div class="col-sm-10">
-            <input type="text" class="form-control" id="inputRegional">
-          </div>
+      <div class="form-group row">
+        <label for="inputRegional" class="col-sm-2 col-form-label">Regional: </label>
+        <div class="col-sm-10">
+          <input type="text" class="form-control" id="inputRegional">
         </div>
-        <div class="form-group row">
-          <label for="inputAdministracao" class="col-sm-2 col-form-label">Administração: </label>
-          <div class="col-sm-10">
-            <input type="text" class="form-control" id="inputAdministracao">
-          </div>
+      </div>
+      <div class="form-group row">
+        <label for="inputAdministracao" class="col-sm-2 col-form-label">Administração: </label>
+        <div class="col-sm-10">
+          <input type="text" class="form-control" id="inputAdministracao">
         </div>
+      </div>
     </form>
 
-    <p-table [value]="locals">
-        <ng-template pTemplate="header">
-          <tr>
-            <th class="text-center">Cód. Relatório</th>
-            <th class="text-center">Nome</th>
-            <th class="text-center">Ação</th>
-          </tr>
-        </ng-template>
-        <ng-template pTemplate="body" let-local>
-          <tr>
-            <td class="text-center">{{local.id}}</td>
-            <td class="text-center">{{local.administrations[0].name}}</td>
-            <td class="text-center">
-              <button pButton type="button" label="Cadastrar Reunião"></button>
-            </td>
-          </tr>
-        </ng-template>
-      </p-table>
+    <br /><br /><br />
 
+    <p-table [value]="locals">
+      <ng-template pTemplate="header">
+        <tr>
+          <th class="text-center">Cód. Relatório</th>
+          <th class="text-center">Nome</th>
+          <th class="text-center">Ação</th>
+        </tr>
+      </ng-template>
+      <ng-template pTemplate="body" let-local>
+        <tr>
+          <td class="text-center">{{local.id}}</td>
+          <td class="text-center">{{local.administrations[0].name}}</td>
+          <td class="text-center">
+            <button pButton type="button" label="Cadastrar Reunião"></button>
+          </td>
+        </tr>
+      </ng-template>
+    </p-table>
+  </div>
 </div>
