--- a/src/app/meetings/meetings-list/meetings-list.component.html
+++ b/src/app/meetings/meetings-list/meetings-list.component.html
@@ -1,22 +1,115 @@
 <div id="wrapper">
   <div class="page-wrapper">
     <br /><br /><br />
+    
+    <h1>Reuniões Agendadas</h1>
+    
+    <hr />
+    
+    <br />
+
+    <table class="table table-striped">
+      <thead>
+        <tr>
+          <th></th>
+          <th class="text-center">Código</th>
+          <th class="text-center">Data Inicial</th>
+          <th class="text-center">Data Final</th>
+          <th class="text-center">Igreja</th>
+          <th class="text-center">Salão</th>
+          <th class="text-center">Ações</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>
+            <p-checkbox></p-checkbox>
+          </td>
+          <td class="text-center">Reunião - 001</td>
+          <td class="text-center">08/02/2020</td>
+          <td class="text-center">08/02/2020</td>
+          <td class="text-center">Vila Passos</td>
+          <td class="text-center">Principal</td>
+          <td class="text-center">
+            <p-selectButton [options]="status" multiple="multiple" ></p-selectButton>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <p-checkbox></p-checkbox>
+          </td>
+          <td class="text-center">Reunião - 002</td>
+          <td class="text-center">08/02/2020</td>
+          <td class="text-center">08/02/2020</td>
+          <td class="text-center">Bairro da Cruz</td>
+          <td class="text-center">Piedade</td>
+          <td class="text-center">
+            <p-selectButton [options]="status" multiple="multiple" ></p-selectButton>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+
+    <!-- <p-table [columns]="cols" [paginator]="true" [rows]="10">
+      <ng-template pTemplate="header">
+        <tr>
+          <th></th>
+          <th class="text-center">Código</th>
+          <th class="text-center">Data Inicial</th>
+          <th class="text-center">Data Final</th>
+          <th class="text-center">Igreja</th>
+          <th class="text-center">Salão</th>
+          <th></th>
+        </tr>
+      </ng-template>
+      <ng-template pTemplate="body">
+        <tr>
+          <td>
+            <p-checkbox></p-checkbox>
+          </td>
+          <td class="text-center">Reunião - 001</td>
+          <td class="text-center">08/02/2020</td>
+          <td class="text-center">08/02/2020</td>
+          <td class="text-center">Vila Passos</td>
+          <td class="text-center">Principal</td>
+          <td class="text-center">
+            <p-selectButton [options]="status" multiple="multiple" ></p-selectButton>
+          </td>
+        </tr>
+      </ng-template>
+    </p-table> -->
+
+  </div>
+</div>
+
+<!-- <div id="wrapper">
+  <div class="page-wrapper">
+    
+    <br /><br /><br />
+    
+    <h1>Listar reunião</h1>
+    
+    <hr />
+    
+    <br />
+
     <form>
       <div class="form-group row">
-        <label for="inputRegional" class="col-sm-2 col-form-label">Regional: </label>
+        <label for="inputRegional" class="col-sm-2">Regional: </label>
         <div class="col-sm-10">
-          <input type="text" class="form-control" id="inputRegional">
+          <input type="text" pInputText class="form-control" id="inputRegional" />
         </div>
       </div>
       <div class="form-group row">
-        <label for="inputAdministracao" class="col-sm-2 col-form-label">Administração: </label>
+        <label for="inputAdministracao" class="col-sm-2">Administração: </label>
         <div class="col-sm-10">
-          <input type="text" class="form-control" id="inputAdministracao">
+          <input type="text" pInputText class="form-control" id="inputAdministracao" />
         </div>
       </div>
     </form>
 
-    <br /><br /><br />
+    <br />
+    <h1>Igrejas</h1>
 
     <p-table [value]="locals">
       <ng-template pTemplate="header">
@@ -37,4 +130,4 @@
       </ng-template>
     </p-table>
   </div>
-</div>
+</div> -->
