--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,10 +1,11 @@
-<div class="container">
-    <footer class="main-footer">
+
+    <footer class="footer">
+      <div class="container">
         <div class="pull-right hidden-xs">
           <b>Version</b> 1.0
         </div>
-        <strong>Copyright &copy; 2020 <a href="https://congregacaocristanobrasil">Congregação Cristã no Brasil</a>.</strong> All rights
+        <strong>Copyright &copy; 2020 <a href="https://congregacaocristanobrasil" style="color: white; padding: 15px;"> Congregação Cristã no Brasil</a>.</strong>  All rights
         reserved.
+      </div>
     </footer>
-</div>
 
