Adicionando página de login

--- a/src/app/components/menubar/menubar.component.html
+++ b/src/app/components/menubar/menubar.component.html
@@ -7,7 +7,7 @@
 
         <!-- MEETINGS -->
         <li>
-          <a href="/"><i class="fa fa-group fa-fw"></i>Reuniões<span class="fa arrow"></span></a>
+          <a href="/"><i class="fa fa-group fa-fw"></i> Reuniões<span class="fa arrow"></span></a>
           <ul class="nav nav-second-level">
             <li>
               <a class="nav-item nav-link" href="meeting/lista"><i class="fa fa-list-alt fa-fw"></i> Listar</a>
@@ -16,14 +16,19 @@
               <a class="nav-item nav-link" href="meeting/novo"><i class="fa fa-edit fa-fw"></i> Cadastrar</a>
             </li>
             <li>
-              <a class="nav-item nav-link" href="meeting/record"><i class="fa fa-file-text-o fa-fw"></i> Relatório</a>
+              <a class="nav-item nav-link" href="meeting/autenticacao"><i class="fa fa-id-card fa-fw"></i>
+                Autenticação</a>
+            </li>
+            <li>
+              <a class="nav-item nav-link" href="meeting/relatorio"><i class="fa fa-file-text-o fa-fw"></i>
+                Relatório</a>
             </li>
           </ul>
         </li>
 
         <!-- LOCALS -->
         <li>
-          <a href="/"><i class="fa fa-map-marker"></i>Locais<span class="fa arrow"></span></a>
+          <a href="/"><i class="fa fa-map-marker"></i> Locais<span class="fa arrow"></span></a>
           <ul class="nav nav-second-level">
             <li>
               <a class="nav-item nav-link" href="locals/lista"><i class="fa fa-list-alt fa-fw"></i> Listar</a>
@@ -32,7 +37,7 @@
               <a class="nav-item nav-link" href="locals/novo"><i class="fa fa-edit fa-fw"></i> Cadastrar</a>
             </li>
             <li>
-              <a class="nav-item nav-link" href="locals/record"><i class="fa fa-file-text-o fa-fw"></i> Relatório</a>
+              <a class="nav-item nav-link" href="locals/relatorio"><i class="fa fa-file-text-o fa-fw"></i> Relatório</a>
             </li>
           </ul>
         </li>
