Criando service login

--- a/src/app/components/security/login/login.component.html
+++ b/src/app/components/security/login/login.component.html
@@ -20,9 +20,9 @@
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
   <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-        <![endif]-->
+    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+  <![endif]-->
 </head>
 
 <body>
@@ -35,7 +35,9 @@
 
         <p-panel header="Fazer Login" [style]="{'margin-bottom':'20px'}">
           <form role="form">
-            <p-fieldset>
+              <h2 class="text-center">CCB</h2>
+              <h3 class="text-center">Congregação Cristã no Brasil</h3>
+              <hr>
               <div class="form-group">
                 <input class="form-control" placeholder="Usuário" name="user" type="text" autofocus>
               </div>
@@ -43,7 +45,6 @@
                 <input class="form-control" placeholder="Password" name="password" type="password" value="">
               </div>
               <button pButton type="button" label="Entrar"></button>
-            </p-fieldset>
           </form>
         </p-panel>
 
@@ -76,13 +77,10 @@
 
   <!-- jQuery -->
   <script src="../../assets/js/jquery.min.js"></script>
-
   <!-- Bootstrap Core JavaScript -->
   <script src="../../assets/js/bootstrap.min.js"></script>
-
   <!-- Metis Menu Plugin JavaScript -->
   <script src="../../assets/js/metisMenu.min.js"></script>
-
   <!-- Custom Theme JavaScript -->
   <script src="../../assets/js/startmin.js"></script>
 
