--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
-<app-header></app-header>
+<app-header [hidden]="!showTemplate"></app-header>
 
-<div id="wrapper">
+<div id="wrapper" [ngClass]="showContentWrapper()">
 
   <div id="page-wrapper">
 
