--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -17,7 +17,7 @@
               </div>
             </div>
           </div>
-          <a href="#">
+          <a href="meeting/lista">
             <div class="panel-footer">
               <span class="pull-left">Visualizar</span>
               <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
@@ -28,7 +28,7 @@
         </div>
       </div>
       <div class="col-lg-3 col-md-6">
-        <div class="panel panel-green">
+        <div class="panel panel-primary">
           <div class="panel-heading">
             <div class="row">
               <div class="col-xs-3">
@@ -44,19 +44,17 @@
             <div class="panel-footer">
               <span class="pull-left">Visualizar</span>
               <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
-
               <div class="clearfix"></div>
             </div>
           </a>
         </div>
       </div>
       <div class="col-lg-3 col-md-6">
-        <div class="panel panel-yellow">
+        <div class="panel panel-primary">
           <div class="panel-heading">
             <div class="row">
               <div class="col-xs-3">
                 <i class="fa fa-address-card fa-5x"></i>
-                <!--  <i class="fa fa-shopping-cart fa-5x"></i> -->
               </div>
               <div class="col-xs-9 text-right">
                 <div class="huge">1200</div>
@@ -75,13 +73,11 @@
         </div>
       </div>
       <div class="col-lg-3 col-md-6">
-        <div class="panel panel-red">
+        <div class="panel panel-primary">
           <div class="panel-heading">
             <div class="row">
               <div class="col-xs-3">
-                <!-- <i class="fa fa-handshake fa-5x"></i> -->
                 <i class="fa fa-address-book fa-5x"></i>
-                <!-- <i class="fa fa-support fa-5x"></i> -->
               </div>
               <div class="col-xs-9 text-right">
                 <div class="huge">13</div>
@@ -93,13 +89,10 @@
             <div class="panel-footer">
               <span class="pull-left">Visualizar</span>
               <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
-
               <div class="clearfix"></div>
             </div>
           </a>
         </div>
       </div>
-
-
     </div>
   </div>
