--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-inverse navbar-fixed-top bg-primary" role="navigation">
   <div class="navbar-header">
-    <a class="navbar-brand" href="#">CCB - Congregação Cristã no Brasil</a>
+    <!-- <a class="navbar-brand" href="#">CCB - Congregação Cristã no Brasil</a> -->
   </div>
 
   <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -16,9 +16,11 @@
         <i class="fa fa-user fa-fw"></i> Login <b class="caret"></b>
       </a>
       <ul class="dropdown-menu dropdown-user">
-        <li><a href="#"><i class="fa fa-user fa-fw"></i> Perfil</a>
+        <li>
+          <a href="#"><i class="fa fa-user fa-fw"></i> Perfil</a>
         </li>
-        <li><a href="#"><i class="fa fa-gear fa-fw"></i> Configurações</a>
+        <li>
+          <a href="#"><i class="fa fa-gear fa-fw"></i> Configurações</a>
         </li>
         <li class="divider"></li>
         <li><a href="/login"><i class="fa fa-sign-out fa-fw"></i> Sair</a>
@@ -26,7 +28,5 @@
       </ul>
     </li>
   </ul>
-
-  <app-menubar></app-menubar>
 
 </nav>
