--- a/src/app/components/menubar/menubar.component.html
+++ b/src/app/components/menubar/menubar.component.html
@@ -1,54 +1,54 @@
-  <div class="navbar-default sidebar" role="navigation">
-    <div class="sidebar-nav navbar-collapse">
-      <ul class="nav" id="side-menu">
-        <li>
-          <a href="#" class="active"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
-        </li>
+<div class="navbar-default sidebar" role="navigation">
+  <div class="sidebar-nav navbar-collapse">
+    <ul class="nav" id="side-menu">
+      <li>
+        <a href="/" class="active"><i class="fa fa-dashboard fa-fw"></i> Home</a>
+      </li>
 
-        <!-- MEETINGS -->
-        <li>
-          <a href="/"><i class="fa fa-group fa-fw"></i> Reuniões<span class="fa arrow"></span></a>
-          <ul class="nav nav-second-level">
-            <li>
-              <a class="nav-item nav-link" href="meeting/lista"><i class="fa fa-list-alt fa-fw"></i> Listar</a>
-            </li>
-            <li>
-              <a class="nav-item nav-link" href="meeting/novo"><i class="fa fa-edit fa-fw"></i> Cadastrar</a>
-            </li>
-            <li>
-              <a class="nav-item nav-link" href="meeting/autenticacao"><i class="fa fa-id-card fa-fw"></i>
-                Autenticação</a>
-            </li>
-            <li>
-              <a class="nav-item nav-link" href="meeting/relatorio"><i class="fa fa-file-text-o fa-fw"></i>
-                Relatório</a>
-            </li>
-          </ul>
-        </li>
+      <!-- MEETINGS -->
+      <li>
+        <a href="#"><i class="fa fa-group fa-fw"></i> Reuniões<span class="fa arrow"></span></a>
+        <ul class="nav nav-second-level">
+          <li>
+            <a class="nav-item nav-link" href="reuniao/lista"><i class="fa fa-list-alt fa-fw"></i> Listar</a>
+          </li>
+          <li>
+            <a class="nav-item nav-link" href="reuniao/novo"><i class="fa fa-edit fa-fw"></i> Cadastrar</a>
+          </li>
+          <li>
+            <a class="nav-item nav-link" href="reuniao/autenticacao"><i class="fa fa-id-card fa-fw"></i>
+              Autenticação</a>
+          </li>
+          <li>
+            <a class="nav-item nav-link" href="reuniao/relatorio"><i class="fa fa-file-text-o fa-fw"></i>
+              Relatório</a>
+          </li>
+        </ul>
+      </li>
 
-        <!-- LOCALS -->
-        <li>
-          <a href="/"><i class="fa fa-map-marker"></i> Locais<span class="fa arrow"></span></a>
-          <ul class="nav nav-second-level">
-            <li>
-              <a class="nav-item nav-link" href="locals/lista"><i class="fa fa-list-alt fa-fw"></i> Listar</a>
-            </li>
-            <li>
-              <a class="nav-item nav-link" href="locals/novo"><i class="fa fa-edit fa-fw"></i> Cadastrar</a>
-            </li>
-            <li>
-              <a class="nav-item nav-link" href="locals/relatorio"><i class="fa fa-file-text-o fa-fw"></i> Relatório</a>
-            </li>
-          </ul>
-        </li>
+      <!-- LOCALS -->
+      <li>
+        <a href="#"><i class="fa fa-map-marker"></i> Locais<span class="fa arrow"></span></a>
+        <ul class="nav nav-second-level">
+          <li>
+            <a class="nav-item nav-link" href="locais/lista"><i class="fa fa-list-alt fa-fw"></i> Listar</a>
+          </li>
+          <li>
+            <a class="nav-item nav-link" href="locais/novo"><i class="fa fa-edit fa-fw"></i> Cadastrar</a>
+          </li>
+          <li>
+            <a class="nav-item nav-link" href="locais/relatorio"><i class="fa fa-file-text-o fa-fw"></i> Relatório</a>
+          </li>
+        </ul>
+      </li>
 
-        <!-- <li>
+      <!-- <li>
           <a href="#"><i class="fa fa-table fa-fw"></i> Tables</a>
         </li>
         <li>
           <a href="#"><i class="fa fa-edit fa-fw"></i> Forms</a>
         </li> -->
-        <!-- <li>
+      <!-- <li>
           <a href="#"><i class="fa fa-wrench fa-fw"></i> UI Elements<span class="fa arrow"></span></a>
           <ul class="nav nav-second-level">
             <li>
@@ -71,7 +71,7 @@
             </li>
           </ul>
         </li> -->
-        <!-- <li>
+      <!-- <li>
           <a href="#"><i class="fa fa-sitemap fa-fw"></i> Multi-Level Dropdown<span class="fa arrow"></span></a>
           <ul class="nav nav-second-level">
             <li>
@@ -99,7 +99,7 @@
             </li>
           </ul>
         </li> -->
-        <!-- <li>
+      <!-- <li>
           <a href="#"><i class="fa fa-files-o fa-fw"></i> Sample Pages<span class="fa arrow"></span></a>
           <ul class="nav nav-second-level">
             <li>
@@ -110,13 +110,13 @@
             </li>
           </ul>
         </li> -->
-      </ul>
-    </div>
+    </ul>
   </div>
+</div>
 
 
 
-  <!-- <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+<!-- <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
   <a class="navbar-brand" href="#">CCB</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
     aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
