--- a/src/app/locals/locals-list/locals-list.component.html
+++ b/src/app/locals/locals-list/locals-list.component.html
@@ -1,48 +1,60 @@
-<div id="wrapper">
-  <div class="page-wrapper">
-    <br /><br /><br />
-    <div class="container">
-      <div class="row">
-        <div class="col-md-2">
-          <label class="text-left">Regional: </label>
-        </div>
-        <div class="col-md-10">
-          <p-autoComplete [suggestions]="filteredCountriesSingle" (completeMethod)="filterCountrySingle($event)"
-            field="name" [size]="30" [minLength]="1">
-          </p-autoComplete>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-2">
-          <label class="text-right">Administração: </label>
-        </div>
-        <div class="col-md-10">
-          <p-autoComplete [suggestions]="filteredCountriesSingle" (completeMethod)="filterCountrySingle($event)"
-            field="name" [size]="30" [minLength]="1">
-          </p-autoComplete>
-        </div>
-      </div>
-    </div>
+<br /><br /><br />
 
-    <br /><br /><br />
+<h1>Locais</h1>
 
-    <p-table [value]="locals">
-      <ng-template pTemplate="header">
-        <tr>
-          <th class="text-center">Cód. Relatório</th>
-          <th class="text-center">Nome</th>
-          <th class="text-center">Ação</th>
-        </tr>
-      </ng-template>
-      <ng-template pTemplate="body" let-local>
-        <tr>
-          <td class="text-center">{{local.id}}</td>
-          <td class="text-center">{{local.administrations[0].name}}</td>
-          <td class="text-center">
-            <button pButton type="button" label="Cadastrar Reunião"></button>
-          </td>
-        </tr>
-      </ng-template>
-    </p-table>
+<hr>
+
+<div class="ui-g ui-fluid">
+  <div class="ui-g-12">
+    <label for="cordigo">Regional: </label>
+    <p-autoComplete [suggestions]="filteredAdministration" (completeMethod)="filterAdministration($event)" field="name"
+      [size]="30" [minLength]="1" id="administracao"></p-autoComplete>
   </div>
+
+  <div class="ui-g-12">
+    <label for="cordigo">Administração: </label>
+    <p-autoComplete [suggestions]="filteredAdministration" (completeMethod)="filterAdministration($event)" field="name"
+      [size]="30" [minLength]="1" id="administracao"></p-autoComplete>
+  </div>
+
 </div>
+
+<br /><br />
+
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th class="text-center">Código Relatório</th>
+      <th class="text-center">Nome</th>
+      <th class="text-center">Ação</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let local of locals">
+      <td class="text-center">{{local.id}}</td>
+      <td class="text-center">{{local.initial}}</td>
+      <td class="text-center">
+        <button pButton type="button" label="Cadastrar reunião"></button>
+      </td>
+    </tr>
+  </tbody>
+</table>
+
+<!-- <p-table [value]="locals">
+  <ng-template pTemplate="header">
+    <tr>
+      <th class="text-center">Cód. Relatório</th>
+      <th class="text-center">Nome</th>
+      <th class="text-center">Ação</th>
+    </tr>
+  </ng-template>
+  <ng-template pTemplate="body" let-local>
+    <tr>
+      <td class="text-center">{{local.id}}</td>
+      <td class="text-center">{{local.administrations[0].name}}</td>
+      <td class="text-center">
+        <button pButton type="button" label="Cadastrar Reunião"></button>
+      </td>
+    </tr>
+  </ng-template>
+</p-table> -->
