--- a/src/app/meetings/meetings-authentication/meetings-authentication.component.html
+++ b/src/app/meetings/meetings-authentication/meetings-authentication.component.html
@@ -1,134 +1,130 @@
-<div id="wrapper">
-  <div class="page-wrapper">
+<br /><br /><br />
 
-    <br /><br /><br />
+<h1>Autenticação</h1>
 
-    <h1>Autenticação</h1>
+<hr>
 
-    <hr>
-
-    <p-panel header="Reunião" [toggleable]="true" [style]="{'margin-bottom':'20px'}">
-      <div class="ui-g">
-        <div class="ui-g-6">
-          <label for="StaticReuniao">Reunião: </label>
-          <span style="padding: 5px;">Reunião Ministerial</span>
-        </div>
-        <div class="ui-g-2">
-          <label for="StaticDate">Data: </label>
-          <span style="padding: 5px;">08/02/2020</span>
-        </div>
-        <div class="ui-g-2">
-          <label for="StaticInicio">Início: </label>
-          <span style="padding: 5px;">10:00</span>
-        </div>
-        <div class="ui-g-2">
-          <label for="StaticTermimo">Término: </label>
-          <span style="padding: 5px;">12:00</span>
-        </div>
-      </div>
-
-      <div class="ui-g">
-        <div class="ui-g-6">
-          <label for="StaticDescricao">Descrição: </label>
-          <span style="padding: 5px;">Reunião dos serviços Ministerial no vale do paraíba.</span>
-        </div>
-        <div class="ui-g-6">
-          <label for="StaticGrupos">Grupos: </label>
-          <span style="padding: 15px;">Ministerial</span>
-        </div>
-      </div>
-
-      <div class="ui-g">
-        <div class="ui-g-12">
-          <label for="StaticStatus">Status: </label>
-          <strong style="padding: 5px; color: red;">Aberta</strong>
-        </div>
-        <div class="ui-g-12">
-          <label for="StaticUser">Usuário: </label>
-          Irmão<span style="padding: 5px;">Flávio</span>
-        </div>
-      </div>
-    </p-panel>
-
-    <div class="ui-g ui-fluid">
-      <div class="ui-g-12">
-        <label for="cordigo">Carteirinha: </label>
-        <div class="ui-inputgroup">
-          <input id="input" type="text" size="30" pInputText />
-          <span class="ui-inputgroup-addon"><i class="pi pi-id-card" style="font-size: 2em;"></i></span>
-        </div>
-      </div>
+<p-panel header="Reunião" [toggleable]="true" [style]="{'margin-bottom':'20px'}">
+  <div class="ui-g">
+    <div class="ui-g-6">
+      <label for="StaticReuniao">Reunião: </label>
+      <span style="padding: 5px;">Reunião Ministerial</span>
     </div>
-
-    <div class="ui-g ui-fluid">
-      <div class="form-group ui-g-12">
-        <h3>Irmãos Autenticados:</h3>
-        <table class="table table-striped">
-          <thead>
-            <tr>
-              <th class="text-center">Código</th>
-              <th class="text-center">Nome</th>
-              <th class="text-center">Categoria</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td class="text-center">CCB001</td>
-              <td class="text-center">Raimundo Luís Iago da Luz</td>
-              <td class="text-center">Ancião</td>
-            </tr>
-            <tr>
-              <td class="text-center">CCB201</td>
-              <td class="text-center">Danilo Moreira</td>
-              <td class="text-center">Ancião</td>
-            </tr>
-            <tr>
-              <td class="text-center">CCB301</td>
-              <td class="text-center">Bruno de Assis</td>
-              <td class="text-center">Ancião</td>
-            </tr>
-            <tr>
-              <td class="text-center">CCB401</td>
-              <td class="text-center">Cauê Pietro Peixoto</td>
-              <td class="text-center">Ancião</td>
-            </tr>
-            <tr>
-              <td class="text-center">CCB501</td>
-              <td class="text-center">Joaquim Bruno Cardoso</td>
-              <td class="text-center">Ancião</td>
-            </tr>
-            <tr>
-              <td class="text-center">CCB001</td>
-              <td class="text-center">Raimundo Luís Iago da Luz</td>
-              <td class="text-center">Ancião</td>
-            </tr>
-            <tr>
-              <td class="text-center">CCB201</td>
-              <td class="text-center">Danilo Moreira</td>
-              <td class="text-center">Ancião</td>
-            </tr>
-            <tr>
-              <td class="text-center">CCB301</td>
-              <td class="text-center">Bruno de Assis</td>
-              <td class="text-center">Ancião</td>
-            </tr>
-            <tr>
-              <td class="text-center">CCB401</td>
-              <td class="text-center">Cauê Pietro Peixoto</td>
-              <td class="text-center">Ancião</td>
-            </tr>
-            <tr>
-              <td class="text-center">CCB501</td>
-              <td class="text-center">Joaquim Bruno Cardoso</td>
-              <td class="text-center">Ancião</td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
+    <div class="ui-g-2">
+      <label for="StaticDate">Data: </label>
+      <span style="padding: 5px;">08/02/2020</span>
     </div>
-    <br /><br /><br /><br />
+    <div class="ui-g-2">
+      <label for="StaticInicio">Início: </label>
+      <span style="padding: 5px;">10:00</span>
+    </div>
+    <div class="ui-g-2">
+      <label for="StaticTermimo">Término: </label>
+      <span style="padding: 5px;">12:00</span>
+    </div>
+  </div>
+
+  <div class="ui-g">
+    <div class="ui-g-6">
+      <label for="StaticDescricao">Descrição: </label>
+      <span style="padding: 5px;">Reunião dos serviços Ministerial no vale do paraíba.</span>
+    </div>
+    <div class="ui-g-6">
+      <label for="StaticGrupos">Grupos: </label>
+      <span style="padding: 15px;">Ministerial</span>
+    </div>
+  </div>
+
+  <div class="ui-g">
+    <div class="ui-g-12">
+      <label for="StaticStatus">Status: </label>
+      <span class="badge badge-pill badge-primary" style="margin-left: 10px;">Aberta</span>
+      <!-- <strong style="padding: 5px; color: red;">Aberta</strong> -->
+    </div>
+    <div class="ui-g-12">
+      <label for="StaticUser">Usuário: </label>
+      Irmão<span style="padding: 5px;">Flávio</span>
+    </div>
+  </div>
+</p-panel>
+
+<div class="ui-g ui-fluid">
+  <div class="ui-g-12">
+    <label for="cordigo">Carteirinha: </label>
+    <div class="ui-inputgroup">
+      <input id="input" type="text" size="30" pInputText />
+      <span class="ui-inputgroup-addon"><i class="pi pi-id-card" style="font-size: 2em;"></i></span>
+    </div>
   </div>
 </div>
+
+<div class="ui-g ui-fluid">
+  <div class="form-group ui-g-12">
+    <h3>Irmãos Autenticados:</h3>
+    <table class="table table-striped">
+      <thead>
+        <tr>
+          <th class="text-center">Código</th>
+          <th class="text-center">Nome</th>
+          <th class="text-center">Categoria</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td class="text-center">CCB001</td>
+          <td class="text-center">Raimundo Luís Iago da Luz</td>
+          <td class="text-center">Ancião</td>
+        </tr>
+        <tr>
+          <td class="text-center">CCB201</td>
+          <td class="text-center">Danilo Moreira</td>
+          <td class="text-center">Ancião</td>
+        </tr>
+        <tr>
+          <td class="text-center">CCB301</td>
+          <td class="text-center">Bruno de Assis</td>
+          <td class="text-center">Ancião</td>
+        </tr>
+        <tr>
+          <td class="text-center">CCB401</td>
+          <td class="text-center">Cauê Pietro Peixoto</td>
+          <td class="text-center">Ancião</td>
+        </tr>
+        <tr>
+          <td class="text-center">CCB501</td>
+          <td class="text-center">Joaquim Bruno Cardoso</td>
+          <td class="text-center">Ancião</td>
+        </tr>
+        <tr>
+          <td class="text-center">CCB001</td>
+          <td class="text-center">Raimundo Luís Iago da Luz</td>
+          <td class="text-center">Ancião</td>
+        </tr>
+        <tr>
+          <td class="text-center">CCB201</td>
+          <td class="text-center">Danilo Moreira</td>
+          <td class="text-center">Ancião</td>
+        </tr>
+        <tr>
+          <td class="text-center">CCB301</td>
+          <td class="text-center">Bruno de Assis</td>
+          <td class="text-center">Ancião</td>
+        </tr>
+        <tr>
+          <td class="text-center">CCB401</td>
+          <td class="text-center">Cauê Pietro Peixoto</td>
+          <td class="text-center">Ancião</td>
+        </tr>
+        <tr>
+          <td class="text-center">CCB501</td>
+          <td class="text-center">Joaquim Bruno Cardoso</td>
+          <td class="text-center">Ancião</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
+<br /><br /><br /><br />
 
 <!-- <p-table [columns]="cols" [value]="virtualCars" [scrollable]="true" [rows]="20" scrollHeight="200px"
   [virtualScroll]="true" (onLazyLoad)="loadDataOnScroll($event)" [lazy]="true" [totalRecords]="totalRecords"
