--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,11 +1,10 @@
-
-    <footer class="footer">
-      <div class="container">
-        <div class="pull-right hidden-xs">
-          <b>Version</b> 1.0
-        </div>
-        <strong>Copyright &copy; 2020 <a href="https://congregacaocristanobrasil" style="color: white; padding: 15px;"> Congregação Cristã no Brasil</a>.</strong>  All rights
-        reserved.
-      </div>
-    </footer>
-
+<footer class="footer">
+  <div class="container">
+    <div class="pull-right hidden-xs">
+      <b>Version</b> 1.0
+    </div>
+    <strong>Copyright &copy; 2020 <a href="https://congregacaocristanobrasil" style="color: white; padding: 15px;">
+        Congregação Cristã no Brasil</a>.</strong> All rights
+    reserved.
+  </div>
+</footer>
