--- a/src/app/components/security/login/login.component.html
+++ b/src/app/components/security/login/login.component.html
@@ -1,89 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
+<div class="container">
+  <div class="row">
+    <div class="col-md-4 col-md-offset-4">
 
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="">
-  <meta name="author" content="">
+      <br /><br />
 
-  <title>CCB - Login</title>
+      <!-- <p-panel header="Fazer Login" [style]="{'margin-bottom':'20px'}"> -->
+      <form role="form">
+        <img src="../../../../assets/img/logotipo-ccb.png" class="logotipo" />
+        <br />
+        <hr>
+        <h4 class="text-center">Fazer login</h4>
 
-  <!-- Bootstrap Core CSS -->
-  <link href="../../assets/css/bootstrap.min.css" rel="stylesheet">
-  <!-- MetisMenu CSS -->
-  <link href="../../assets/css/metisMenu.min.css" rel="stylesheet">
-  <!-- Custom CSS -->
-  <link href="../../assets/css/startmin.css" rel="stylesheet">
+        <div class="form-group">
+          <input class="form-control" placeholder="Usuário" name="user" type="text" autofocus>
+        </div>
+        <div class="form-group">
+          <input class="form-control" placeholder="Password" name="password" type="password" value="">
+        </div>
+        <button pButton type="button" label="Entrar"></button>
+      </form>
+      <!-- </p-panel> -->
 
-  <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-  <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-  <![endif]-->
-</head>
-
-<body>
-
-  <div class="container">
-    <div class="row">
-      <div class="col-md-4 col-md-offset-4">
-
-        <br /><br />
-
-        <p-panel header="Fazer Login" [style]="{'margin-bottom':'20px'}">
-          <form role="form">
-              <h2 class="text-center">CCB</h2>
-              <h3 class="text-center">Congregação Cristã no Brasil</h3>
-              <hr>
-              <div class="form-group">
-                <input class="form-control" placeholder="Usuário" name="user" type="text" autofocus>
-              </div>
-              <div class="form-group">
-                <input class="form-control" placeholder="Password" name="password" type="password" value="">
-              </div>
-              <button pButton type="button" label="Entrar"></button>
-          </form>
-        </p-panel>
-
-
-
-        <!-- <div class="login-panel panel panel-default">
-          <div class="panel-heading">
-            <h3 class="panel-title">Fazer Login</h3>
-          </div>
-          <div class="panel-body">
-            <form role="form">
-              <fieldset>
-                <div class="form-group">
-                  <input class="form-control" placeholder="Usuário" name="user" type="text" autofocus>
-                </div>
-                <div class="form-group">
-                  <input class="form-control" placeholder="Password" name="password" type="password" value="">
-                </div>
-                <button pButton type="button" label="Entrar"></button>
-              </fieldset>
-            </form>
-          </div>
-        </div> -->
-
-
-
-      </div>
     </div>
   </div>
-
-  <!-- jQuery -->
-  <script src="../../assets/js/jquery.min.js"></script>
-  <!-- Bootstrap Core JavaScript -->
-  <script src="../../assets/js/bootstrap.min.js"></script>
-  <!-- Metis Menu Plugin JavaScript -->
-  <script src="../../assets/js/metisMenu.min.js"></script>
-  <!-- Custom Theme JavaScript -->
-  <script src="../../assets/js/startmin.js"></script>
-
-</body>
-
-</html>
+</div>
