--- a/src/app/locals/locals-add/locals-add.component.html
+++ b/src/app/locals/locals-add/locals-add.component.html
@@ -1,54 +1,48 @@
-<div id="wrapper">
-  <div class="page-wrapper">
+<br /><br /><br />
 
-    <br /><br /><br />
+<h1>Cadastro de Locais</h1>
 
-    <form>
-      <p-fieldset legend="Cadastro">
-        <div class="ui-g ui-fluid">
-          <div class="ui-g-1">
-            <label for="local">Local</label>
-          </div>
-          <div class="ui-g-6">
-            <input id="local" type="text" size="30" pInputText [style]="{'width': '100%'}">
-          </div>
-          <div class="ui-g-1">
-            <label for="local">Data</label>
-          </div>
-          <div class="ui-g-4">
-            <p-calendar dateFormat="dd/mm/yyyy"></p-calendar>
-          </div>
-        </div>
-        <div class="ui-g ui-fluid">
-          <div class="ui-g-1">
-            <label for="descricao">Descrição</label>
-          </div>
-          <div class="ui-g-11">
-            <input id="descricao" type="text" size="30" pInputText [style]="{'width': '100%'}">
-          </div>
-        </div>
-      </p-fieldset>
-      <p-fieldset legend="Administração">
-        <div class="ui-g ui-fluid">
-          <div class="ui-g-1">
-            <label for="descricao">ADM</label>
-          </div>
-          <div class="ui-g-11">
-            <p-autoComplete field="name" [size]="30" placeholder="Administração" [minLength]="1"
-              [suggestions]="filteredAdminSingle" (completeMethod)="filterAdminSingle($event)">
-            </p-autoComplete>
-          </div>
-        </div>
-      </p-fieldset>
-      <div class="ui-g ui-fluid">
-        <div class="ui-g-8"></div>
-        <div class="ui-g-2">
-          <button pButton type="button" label="Salvar" class="ui-button-rounded"></button>
-        </div>
-        <div class="ui-g-2">
-          <button pButton type="button" label="Cancelar" class="ui-button-rounded ui-button-danger"></button>
-        </div>
+<hr />
+
+<form>
+
+  <p-fieldset legend="Dados do local">
+    <div class="ui-g ui-fluid">
+      <div class="form-group ui-g-6">
+        <label for="igreja">Local: </label>
+        <input type="text" pInputText class="form-control" id="igreja" />
       </div>
-    </form>
-  </div>
-</div>
+      <div class="form-group ui-g-6">
+        <label for="salao">Data: </label>
+        <p-calendar [showIcon]="true" id="date"></p-calendar>
+      </div>
+      <div class="form-group ui-g-12">
+        <label for="descricao">Descrição: </label>
+        <input type="text" pInputText class="form-control" id="descricao" />
+      </div>
+    </div>
+  </p-fieldset>
+
+  <p-fieldset legend="Administração">
+    <div class="ui-g ui-fluid">
+      <div class="ui-g-1">
+        <label for="descricao">ADM</label>
+      </div>
+      <div class="ui-g-11">
+        <p-autoComplete field="name" [size]="30" placeholder="Administração" [minLength]="1"
+          [suggestions]="filteredAdminSingle" (completeMethod)="filterAdminSingle($event)">
+        </p-autoComplete>
+      </div>
+    </div>
+  </p-fieldset>
+
+  <br />
+
+  <a pButton type="button" label="Salvar" class="ui-button-info"
+    style="float: right !important; margin-left: 10px !important;"></a>
+
+  <a pButton type="button" label="Cancelar" class="ui-button-danger" style="float: right !important;"></a>
+
+</form>
+
+<br /><br /><br /><br />
